# Reflection

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Reflection.cpp  Reflection.cpp.old  Reflection.h  Reflection.h.old
test/: CMakeLists.txt  SampleStructs.cpp  SampleStructs.h  StringSerializer.h  TestReflectionXML.cpp  XMLDeserializer.cpp  XMLDeserializer.h  XMLSerializer.cpp  XMLSerializer.h  XSDSerializer.cpp  XSDSerializer.h  test_NameSpace.cpp  test_aliases.cpp  test_enums.cpp  test_optional.cpp  test_reflection.cpp  test_reflection_vect.cpp  test_util.h  test_xsd.cpp  test_xsd2.cpp
